--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -4,6 +4,11 @@ on:
   pull_request:
     branches: [ main, dev, staging ]
 
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+
 jobs:
   pr-checks:
     runs-on: ubuntu-latest
