--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -27,16 +27,26 @@ jobs:
       run: npm ci
 
     - name: Run linter
+      id: lint
       run: npm run lint
+      continue-on-error: true
 
     - name: Build project
+      id: build
       run: npm run build
+      continue-on-error: true
 
     - name: Comment PR
       uses: actions/github-script@v7
       if: always()
       with:
         script: |
+          // Only run on pull requests
+          if (context.eventName !== 'pull_request') {
+            console.log('Not a pull request event, skipping comment');
+            return;
+          }
+
           const { data: comments } = await github.rest.issues.listComments({
             owner: context.repo.owner,
             repo: context.repo.repo,
@@ -47,29 +57,46 @@ jobs:
             comment.user.type === 'Bot' && comment.body.includes('Build Status')
           );
           
-          const status = '${{ job.status }}' === 'success' ? '✅ Passed' : '❌ Failed';
+          // Check step outcomes
+          const lintStatus = '${{ steps.lint.outcome }}';
+          const buildStatus = '${{ steps.build.outcome }}';
+          
+          const allPassed = lintStatus === 'success' && buildStatus === 'success';
+          const status = allPassed ? '✅ Passed' : '❌ Failed';
+          
+          let statusDetails = '';
+          if (!allPassed) {
+            statusDetails = '\n**Failed Steps:**\n';
+            if (lintStatus !== 'success') statusDetails += '- Linter failed\n';
+            if (buildStatus !== 'success') statusDetails += '- Build failed\n';
+          }
+          
           const body = `## Build Status: ${status}
           
           **Commit:** \`${context.sha.substring(0, 7)}\`
-          **Branch:** \`${context.head_ref}\`
+          **Branch:** \`${context.payload.pull_request.head.ref}\`${statusDetails}
           
-          ${status === '✅ Passed' ? 
+          ${allPassed ? 
             'All checks passed! This PR is ready for review.' : 
             'Some checks failed. Please fix the issues before merging.'
           }`;
           
-          if (botComment) {
-            github.rest.issues.updateComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              comment_id: botComment.id,
-              body: body
-            });
-          } else {
-            github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-              body: body
-            });
+          try {
+            if (botComment) {
+              await github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: botComment.id,
+                body: body
+              });
+            } else {
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                body: body
+              });
+            }
+          } catch (error) {
+            console.error('Failed to post comment:', error);
           }
